# Explorant

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build_test_executables.sh  docker_perms.sh  example1.dot  explorant.sh  facts.txt  malloc_bins.c  malloc_mmap.c  malloc_simple.c  no_synoptic.dot  out.txt  rounds_data.txt  test.dot  test_mmap.c
examples/date_bounded_func/: main.c
examples/malloc/: README.md  build.sh  test_malloc.c
examples/modules/: modules.c
examples/simple/: DWARF.txt  a.out  simple.c
examples/simple/recording/: data  events  frame_time_map.json  mmap_hardlink_4_a.out  mmaps  tasks  version
frontend/: '  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  graphviz_worker.js  tutorials.js  util.js
frontend/src/components/: AddNodeModal.js  EventLoader.js  ExecutionInstanceList.js  LaneViewer.js  LoadingModal.js  ModuleEditor.js  NodeEditor.js  SplitLayout.js  StringCompletionInput.js  TextModal.js  graphviewer.js  srcviewer.js
scripts/: frame_extract.sh  screen_record.sh
src/: address_recorder.rs  block.rs  code_flow_graph.rs  erebor.rs  file_parsing.rs  gdb_instance_manager.rs  graph_builder.rs  graph_layout.rs  gui.rs  lcs.rs  main.rs  mvp.rs  query.rs  recorder.rs  shared_structs.rs  simulation.rs  symbol_map.rs  trampoline.rs
synoptic/: Dockerfile  build.sh  run.sh
synoptic/shared/: README.txt  out.dot  out.gml  out.json  out.lts
test-executables/date_viewer/: Cargo.toml
test-executables/date_viewer/src/: main.rs
test-executables/many_threads/: Cargo.toml
test-executables/many_threads/src/: main.rs
