[package]
name = "continue_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# librr_rs = {git="https://github.com/zaporter/librr_rs"}
librr_rs = {path="../librr_rs/"}
druid_graphviz_layout = {path="../druid_graphviz_layout/"}
serial_test = "0.8.0"
rust-lapper = {git = "https://github.com/zaporter/rust-lapper"}
rand = "0.8.5"
gag = "1.0.0"
similar = "2.2"
nix= "0.25"
object="0.29"
iced-x86 = {version="1.17.0",features=["code_asm"]}
symbolic={version="9.1",features=["demangle"]}
symbolic-demangle={version="9.1", features=["rust", "cpp", "msvc"]}
dot="0.1.4"
symbolic-common={version="9.1"}
procmaps = {git = "https://github.com/zaporter/procmaps"}
itertools="0.10"
env_logger="0.9"
serde= {version="1.0", features=["derive"]}
json5="0.4"

druid = {git="https://github.com/linebender/druid"}
