[package]
name = "continue_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# librr_rs = {git="https://github.com/zaporter/librr_rs"}
rayon = "1.5"
fallible-iterator = { version = "0.2.0"}
actix-web = "4"
regex = "1"
typed-arena = "2"
actix-files = "0.6"
port_scanner = "0.1"
actix-cors = "0.6.2"
dirs="4"
anyhow={version="1.0",features=["backtrace"]}
serde_json="1.0"
gml_parser= "0.1.1"
log = "0.4"
gimli = "0.26.2"
librr_rs = {path="../librr_rs/"}
druid_graphviz_layout = {path="../druid_graphviz_layout/"}
serial_test = "0.8.0"
rust-lapper = {git = "https://github.com/zaporter/rust-lapper"}
rand = "0.8.5"
gag = "1.0.0"
similar = "2.2"
nix= "0.25"
object="0.29"
iced-x86 = {version="1.17.0",features=["code_asm"]}
symbolic={version="9.1",features=["demangle"]}
symbolic-demangle={version="9.1", features=["rust", "cpp", "msvc"]}
chrono = {version = "0.4.22", features = ["serde"] }
dot-writer="0.1.3"
symbolic-common={version="9.1"}
procmaps = {git = "https://github.com/zaporter/procmaps"}
itertools="0.10"
env_logger="0.9"
serde= {version="1.0", features=["derive"]}
json5="0.4"
clap={version="4.0",features=["derive"]}

druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }

[dependencies.druid]
git = "https://github.com/linebender/druid"
rev = "fc05e965c85fced8720c655685e02478e0530e94" # update this when upgrading to newer druid
# path = "../../projects/druid/druid"
features = ["im"]



[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
